# babelfish

./: .gitignore  AGENTS.md  HANDY_STT_ANALYSIS.md  babelfish.py  babelfish_schema.json  config.json  config_manager.py  hardware_manager.py  launcher.md  models_config.py  pyproject.toml  raw_aioquic_server.py  readme.md  requirements_stt.txt  run_stt.py  typer_manager.py  verify_server_only.py  whisper_vram_usage.md  wipe_uv_cache.sh
.gemini/: settings.json
.gemini/hooks/: codebase_overview.py
.gemini/skills/sourcecrawler/: SKILL.md
.github/workflows/: release_asset.yml
.llm_kb/: asyncio_deep_dive.md  gemini_cli_hooks.md  pywebtransport_docs.md  pywebtransport_repo.md  pywebtransport_tests.md
.llm_kb/working/: hooks_ref_raw.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/aioquic_migration_20260209/: index.md  metadata.json  spec.md
conductor/archive/config_management_20260207/: metadata.json
conductor/archive/double_pass_refinement_20260207/: plan.md  spec.md
conductor/archive/push_config_on_connect_20260209/: plan.md  spec.md
conductor/archive/voice_control_20260207/: metadata.json  plan.md
conductor/tracks/aioquic_migration_20260209/: plan.md
conductor/tracks/audio_verification_20260215/: metadata.json  plan.md  spec.md
conductor/tracks/config_management_20260207/: index.md  plan.md  spec.md
conductor/tracks/double_pass_refinement_20260207/: index.md  metadata.json  plan.md
conductor/tracks/push_config_on_connect_20260209/: index.md  metadata.json  plan.md
conductor/tracks/startup_rework_20260209/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/streaming_foundation_20260207/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/voice_control_20260207/: index.md  plan.md  spec.md
docs/: migration_to_aioquic.md
scripts/: generate_schema.py  generate_schema.sh  get_cert_fingerprint.py  regen_cert.py
src/babelfish_stt/: audio.py  config.py  config_manager.py  display.py  engine.py  hardware.py  hotkey_manager.py  input_manager.py  input_strategies.py  main.py  pipeline.py  reconfigurable.py  server.py  vad.py  wakeword.py  wakeword_discovery.py
tests/: AUDIO_VERIFICATION_PLAN.md  AUDIO_VERIFICATION_TESTS.md  audio_fixtures.py  check_mic_raw.py  conftest.py  detect_active_mic.py  diag_vad.py  inspect_mic.py  standalone_server.py  test_aioquic_protocol.py  test_alignment.py  test_audio.py  test_babelfish.py  test_cli_control.py  test_config_manager.py  test_config_models.py  test_display.py  test_display_input.py  test_e2e_input.py  test_e2e_logic.py  test_e2e_voice_control.py  test_engine.py  test_ghost_text.py  test_hardware.py  test_hardware_usage.py  test_history.py  test_hot_reloading.py  test_input_manager.py  test_input_simulator.py  test_input_strategies.py  test_main_args.py  test_orchestration.py  test_pipeline_components.py  test_pipeline_state.py  test_pipelines.py  test_reconfigurable.py  test_restart_required.py  test_schema.py  test_server.py  test_server_config_update.py  (+8 more)
tests/fixtures/: corpus.yaml
