[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "babelfish"
version = "0.1.0"
description = "High-performance local STT pipeline using parakeet-stream"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "parakeet-stream[microphone]",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "pyarrow<19.0.0",
    "nemo_toolkit[asr]>=2.6.2",
    "cuda-python>=12.3",
    "onnxruntime-gpu",
    "openwakeword>=0.6.0",
    "numpy<2",
    "omegaconf",
    "pydantic>=2.12.5",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[project.scripts]
babelfish = "babelfish_stt.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
