[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "babelfish"
version = "0.1.0"
description = "High-performance local STT pipeline using unified ONNX"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "pyarrow<19.0.0",
    "numpy<2",
    "omegaconf",
    "tensorflow",
    "openwakeword",
    "pydantic>=2.12.5",
    "aiohttp>=3.13.3",
    "websockets>=14.2",
    "onnx-asr",
    "huggingface-hub",
    "sounddevice",
    "soxr",
    "pynput",
    "notify-py",
    "pyperclip",
    "grapheme",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime==1.23.2",
]
# Unified Windows acceleration (AMD/Intel/NVIDIA)
windows-gpu = [
    "onnxruntime-directml",
]
# Native performance for NVIDIA on Linux
nvidia-linux = [
    "onnxruntime-gpu==1.23.2",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cufft-cu12",
    "nvidia-curand-cu12",
    "nvidia-cuda-nvrtc-cu12",
]
# Native performance for NVIDIA on Windows
nvidia-win = [
    "onnxruntime-gpu==1.23.2",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cufft-cu12",
    "nvidia-curand-cu12",
    "nvidia-cuda-nvrtc-cu12",
]
# Native performance for AMD on Linux
amd-linux = [
    "onnxruntime-rocm",
]
# Native performance for Intel on Linux
intel-linux = [
    "onnxruntime-openvino",
]

[[tool.uv.index]]
# Default to CPU index for base install size reduction.
# The bootstrapper will override UV_INDEX_PYTORCH_URL if a GPU is detected.
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
openwakeword = { git = "https://github.com/dscripka/openWakeWord.git" }

[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
    "sys_platform == 'darwin'",
]

[project.scripts]
babelfish = "babelfish_stt.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
    "soundfile>=0.12.0",
    "pyyaml>=6.0.0",
    "jiwer>=3.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
